remove Kafka and Avro and add Spring Batch
