# src/main/resources/openapi/openapi.yaml
@@ -782,25 +782,20 @@ components:
     LoanRequest:
       type: object
       required:
-        - userId
         - bookId
 
       properties:
-        userId:
-          type: integer
-          format: int64
-          minimum: 1
-          example: 1
-
         bookId:
           type: integer
           format: int64
           minimum: 1
           example: 2
 
+
     LoanResponse:
       type: object
       properties:
+
         id:
           type: integer
           format: int64
@@ -813,15 +808,21 @@ components:
           type: string
           example: Clean Code
 
-        BorrowDate:
+        borrowDate:
           type: string
-          format: date
-          example: "2026-07-27"
+          format: date-time
+          example: "2026-08-12T14:30:00"
+
+        dueDate:
+          type: string
+          format: date-time
+          example: "2026-08-26T14:30:00"
 
         returnDate:
           type: string
-          format: date
-          example: "2026-08-10"
+          format: date-time
+          nullable: true
+          example: "2026-08-26T14:30:00"
 
         loanStatus:
           type: string
